whoami-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: whoami
  minReadySeconds: 5
  replicas: 3
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: containous/whoami:latest
        ports:
        - containerPort: 80
