whoami-service.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: default
spec:
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
