whoami-nwp.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: whoami-nwp
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: whoami
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          use: whoami
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          used: whoami
